the POM.xml has been freed!!!

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,6 @@
 gridIP = 44.206.247.192
 
-browser = chrome-remote
+browser=safari
 envt= https://library2.cydeo.com/login.html
 
 lib01_username=librarian1@library
