--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,6 @@
 gridIP = 44.206.247.192
 
-browser=safari
+browser=edge
 envt= https://library2.cydeo.com/login.html
 
 lib01_username=librarian1@library
