--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 node {
     stage('Clone code') {
-        git 'https://github.com/mehmetCt/demo-project.git'
+        git https://github.com/fbada/app-Cydeo-library.git'
     }
 
     stage('Run tests'){
