--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,6 @@
-gridIP = 44.206.247.192
+gridIP = 54.160.204.81:4444
 
-browser=chrome
+browser=chrome-remote
 envt= https://library2.cydeo.com/login.html
 
 lib01_username=librarian1@library
